--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-credit-cards-2": "^1.0.2",
     "react-creditcard-validator": "^1.0.6",
     "react-dom": "^18",
+    "react-phone-number-input": "^3.4.5",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1"
