--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-phone-number-input": "^3.4.5",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "eslint": "^8",
