--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.6.8",
     "card-validator": "^9.1.0",
+    "fs": "^0.0.1-security",
     "next": "14.2.3",
     "react": "^18",
     "react-credit-cards-2": "^1.0.2",
@@ -20,7 +22,8 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
-    "swiper": "^11.1.15"
+    "swiper": "^11.1.15",
+    "swr": "^2.3.2"
   },
   "devDependencies": {
     "eslint": "^8",
