--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
     "card-validator": "^9.1.0",
+    "cors": "^2.8.5",
     "fs": "^0.0.1-security",
     "next": "14.2.3",
     "react": "^18",
